MID: 655 MSG: Jocs de proves amb Selenium v.3 	ENT.8 Crear enumeracions 	DPR.1 Desplegar arxiu jBPM a entorn i a tipus d'expedient 	DPR.12 Eliminar definició de procés
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1152 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -36,22 +36,40 @@ entorn.titol=Entorn de proves Selenium - Entorn
 # Proves Definició de procés
 defproc.entorn.nom=Selenium defpro
 defproc.entorn.titol=Entorn de proves Selenium - Definicio Proces
-
-deploy.definicio.proces.nom=expexe
-deploy.tipus.expedient.codi=TipExpSel
-deploy.tipus.expedient.nom=Tipus expedient de Selenium
+defproc.deploy.definicio.proces.nom=expexe
+defproc.deploy.tipus.expedient.codi=TipExpSel
+defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
+defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
 #deploy.arxiu.path=src\\test\\resources\\expese.par
 # Windows
 # deploy.arxiu.path=c:/expese.par
 # Linux
-deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
-
+#deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
+defproc.export.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
 
 defproc.enum.codi1=sino
 defproc.enum.nom1=Sí/No
 
-defproc.variable.codi1=var_str01
-defproc.variable.nom1=Nom variable string 1
+defproc.variable.string.codi=var_str
+defproc.variable.string.nom=Nom variable string
+defproc.variable.int.codi=var_int
+defproc.variable.int.nom=Nom variable integer
+defproc.variable.float.codi=var_float
+defproc.variable.float.nom=Nom variable float
+defproc.variable.bool.codi=var_bool
+defproc.variable.bool.nom=Nom variable boolean
+defproc.variable.tarea.codi=var_tarea
+defproc.variable.tarea.nom=Nom variable text area
+defproc.variable.date.codi=var_date
+defproc.variable.date.nom=Nom variable date
+defproc.variable.price.codi=var_price
+defproc.variable.price.nom=Nom variable price
+defproc.variable.term.codi=var_term
+defproc.variable.term.nom=Nom variable termini
+defproc.variable.enum.codi=var_selenum
+defproc.variable.enum.nom=Nom variable boolean
+
+
 defproc.variable.codi2=var_dat01
 defproc.variable.nom2=Nom variable data 1
 defproc.variable.codi3=var_enum01
