mid: 613 msg: Error al registrar des de les accions massives
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1158 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -71,6 +71,13 @@
 		</dependency>
 		<dependency>
 			<groupId>es.caib</groupId>
+			<artifactId>portasignatures-wsdl</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/portasignatures-wsdl.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>es.caib</groupId>
 			<artifactId>regweb-client</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
@@ -85,10 +92,10 @@
 		</dependency>
 		<dependency>
 			<groupId>es.caib</groupId>
-			<artifactId>portasignatures-wsdl</artifactId>
+			<artifactId>regweb-ws</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/portasignatures-wsdl.jar</systemPath>
+			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/regweb-ws.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>netscape</groupId>
