MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.2.1 Crear variables (2.1.1 - 2.1.8, 2.1.9.1, 2.1.11) 	DPR.2.2 Definir variables múltiples 	DPR.2.3 Definir variables ocultes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1161 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -50,6 +50,11 @@ defproc.export.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
 defproc.enum.codi1=sino
 defproc.enum.nom1=Sí/No
 
+defproc.deploy.agrupacio.1.codi=agrup1
+defproc.deploy.agrupacio.1.nom=Agrupació de test 1
+defproc.deploy.agrupacio.2.codi=agrup2
+defproc.deploy.agrupacio.2.nom=Agrupació de test 2
+
 defproc.variable.string.codi=var_str
 defproc.variable.string.nom=Nom variable string
 defproc.variable.int.codi=var_int
@@ -68,7 +73,8 @@ defproc.variable.term.codi=var_term
 defproc.variable.term.nom=Nom variable termini
 defproc.variable.enum.codi=var_selenum
 defproc.variable.enum.nom=Nom variable boolean
-
+defproc.variable.reg.codi=var_registre
+defproc.variable.reg.nom=Nom variable registre
 
 defproc.variable.codi2=var_dat01
 defproc.variable.nom2=Nom variable data 1
