MID: 655 MSG: Jocs de proves amb Selelium v.3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1172 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -1,15 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>net.conselldemallorca</groupId>
-    <artifactId>helium</artifactId>
-    <version>3.0</version>
-  </parent>
-  <artifactId>helium-selenium</artifactId>
-  <properties>
-  	<skipTests>true</skipTests>
-  </properties>
-  <dependencies>
+<?xml version="1.0"?>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>net.conselldemallorca</groupId>
+		<artifactId>helium</artifactId>
+		<version>3.0</version>
+	</parent>
+	<artifactId>helium-selenium</artifactId>
+	<properties>
+		<skipTests>true</skipTests>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+<!-- 		<dependency> -->
+<!-- 			<groupId>es.caib</groupId> -->
+<!-- 			<artifactId>signaturacaib</artifactId> -->
+<!-- 			<version>4.2.1</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${basedir}/../helium-selenium/lib/signaturacaib.core-4.2.1-api-unsigned.jar</systemPath> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -20,12 +31,46 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-  </dependencies>
-  <build>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>net.conselldemallorca</groupId> -->
+<!-- 			<artifactId>helium-core-v26</artifactId> -->
+<!-- 			<version>${helium.version}</version> -->
+<!-- 			<type>jar</type> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-selenium-integraciones</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-ws</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-plugin-impl</artifactId>
+			<version>${helium.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				 <version>3.1</version>
 				<configuration>
 					<fork>true</fork>
 					<compilerVersion>1.6</compilerVersion>
@@ -34,28 +79,30 @@
 				</configuration>
 			</plugin>
 			<plugin>
-<!-- 				Per a executar els tests: mvn test -DskipTests=false  (amb helium funcionant) -->
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-surefire-plugin</artifactId>
+				<!-- Per a executar els tests: mvn test -DskipTests=false (amb helium 
+					funcionant) -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-		          <includes>
-<!-- 		          Suites de proves a executar -->
-		          	<include>**/ConfiguracioEntornSuite.java</include>
-		          </includes>
-		          <skipTests>${skipTests}</skipTests>
-		        </configuration>
-	        </plugin>
+					<includes>
+						<!-- Suites de proves a executar -->
+						<include>**/ConfiguracioEntornSuite.java</include>
+					</includes>
+					<skipTests>${skipTests}</skipTests>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
 		<plugins>
 			<plugin>
-<!-- 			Per a generar el report: mvn surefire-report:report -DskipTests=false (amb helium funcionant) o -->
-<!-- 									 mvn surefire-report:report-only (amb tests ja executats) -->
-		      	<groupId>org.apache.maven.plugins</groupId>
-		      	<artifactId>maven-site-plugin</artifactId>
-		      	<version>3.3</version>
-	    	</plugin>
+				<!-- Per a generar el report: mvn surefire-report:report -DskipTests=false 
+					(amb helium funcionant) o -->
+				<!-- mvn surefire-report:report-only (amb tests ja executats) -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.3</version>
+			</plugin>
 		</plugins>
 	</reporting>
 </project>
