MID: 655 MSG: Jocs de proves amb Selelium v.3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1175 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -43,13 +43,13 @@
 <!-- 			<type>jar</type> -->
 <!-- 			<scope>compile</scope> -->
 <!-- 		</dependency> -->
-		<dependency>
-			<groupId>net.conselldemallorca</groupId>
-			<artifactId>helium-selenium-integraciones</artifactId>
-			<version>${helium.version}</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>net.conselldemallorca</groupId> -->
+<!-- 			<artifactId>helium-selenium-integraciones</artifactId> -->
+<!-- 			<version>${helium.version}</version> -->
+<!-- 			<type>jar</type> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-ws</artifactId>
