MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.1 Nou expedient EXP.2 Modificar informació de l'expedient EXP.3 Modificar versió del procés EXP.4 Afegir expedient relacionat EXP.5 Accions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1185 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -30,7 +30,7 @@ test.base.group=pruebas
 test.base.group.tipo=tipo de pruebas
 
 # Proves Entorn
-entorn.nom=Selenium entorn
+entorn.nom=proves_selenium
 entorn.titol=Entorn de proves Selenium - Entorn
 
 # Proves Definició de procés
@@ -39,14 +39,15 @@ defproc.entorn.titol=Entorn de proves Selenium - Definicio Proces
 defproc.deploy.definicio.proces.nom=expexe
 defproc.deploy.tipus.expedient.codi=TipExpSel
 defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
-defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
-#deploy.arxiu.path=src\\test\\resources\\expese.par
+defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
+#deploy.arxiu.path=src\\test\\resources\\expexe.par
 # Windows
-# deploy.arxiu.path=c:/expese.par
+# deploy.arxiu.path=c:/expexe.par
 # Linux
-#deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
+#deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
 defproc.export.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
 
+# Definició de procés
 defproc.enum.codi1=sino
 defproc.enum.nom1=Sí/No
 
@@ -110,8 +111,35 @@ tipexp.estat.nom1=Revisant documentació
 tipexp.enum.codi1=tipexp
 tipexp.enum.nom1=Tipus expedient
 
+# Portasignatures
+deploy.arxiu.portasignatures=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
+app.portasignatures.plugin.url=http://localhost:8080/helium-selenium-integraciones/services/CWS
+app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
+app.portasignatures.plugin.usuari=HELIUM
+app.portasignatures.plugin.password=HELIUM
 
-# Tramitació expedient
+# Custodia
+deploy.arxiu.custodia=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
+app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
+app.custodia.plugin.caib.url=http://localhost:8080/helium-selenium-integraciones/services/CustodiaDocumentos
+app.custodia.plugin.caib.usuari=HELIUM
+app.custodia.plugin.caib.password=HELIUMABC
+app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
+
+# Integració amb el Registre
+deploy.arxiu.registre=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+
+# Tramitación
+app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
+
+# Tramitación Selenium
+tramsel.entorn.nom=Entorn de proves Selenium - Tramitación
+tramsel.entorn.titol=Entorn de proves Selenium - Tramitación
+tramsel.deploy.definicio.proces.nom=expexe
+tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
+
 tramit.exp.num=SE-16/2013
 tramit.exp.nom=[SE-16/2013] Expedient de prova Selenium 16
 tramit.tasca.nom1=tasca1
@@ -123,3 +151,15 @@ tramit.usuari.codi1=u03420
 tramit.document.nom1=Nom document 1
 tramit.docadjunt.arxiu1=c:/docAdjunt.docx
 tramit.docadjunt.nom1=Nom document adjunt 1
+
+tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_accio.par
+tramsel_accio.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_accio.exp
+
+defproc.mod.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_mod_exp.par
+defproc.mod.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_mod_exp.exp
+
+defproc.nou.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_nou_exp.par
+defproc.nou.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_nou_exp.exp
+
+defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.par
+defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.exp
