MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.6.1 Visualizació de les dades bàsiques, múltiples i tipus registre
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1188 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -163,3 +163,5 @@ defproc.nou.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\heli
 
 defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.par
 defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.exp
+
+defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_dades_exp.exp
