--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -12,6 +12,7 @@ test.executar.suite.configuracio=true
 webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
 
 # Adreça - usuari del test
+test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
 test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
 test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
@@ -37,15 +38,16 @@ entorn.titol=Entorn de proves Selenium - Entorn
 defproc.entorn.nom=Selenium defpro
 defproc.entorn.titol=Entorn de proves Selenium - Definicio Proces
 defproc.deploy.definicio.proces.nom=expexe
+defproc.deploy.definicio.subproces.nom=subprocesInfo
 defproc.deploy.tipus.expedient.codi=TipExpSel
 defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
-defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
+defproc.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe.par
 #deploy.arxiu.path=src\\test\\resources\\expexe.par
 # Windows
 # deploy.arxiu.path=c:/expexe.par
 # Linux
-#deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
-defproc.export.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
+#deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe.par
+defproc.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\entorn_defpro.exp
 
 # Definició de procés
 defproc.enum.codi1=sino
@@ -165,3 +167,4 @@ defproc.nou_tasca_ini.exp.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_heliu
 defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_ini_exp.exp
 
 defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_dades_exp.exp
+defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_subproces.par
