MID: 655 MSG: Jocs de proves amb Selenium v.3 	Fitxer properties
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1196 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -30,11 +30,19 @@ test.base.rol.configuracio=HEL_USER
 test.base.group=pruebas
 test.base.group.tipo=tipo de pruebas
 
-# Proves Entorn
-entorn.nom=proves_selenium
-entorn.titol=Entorn de proves Selenium - Entorn
+# DISSENY
+######################################################################
 
-# Proves Definició de procés
+# Entorn
+# --------------------------------------------------------------------
+entorn.nom=Selenium entorn
+entorn.titol=Entorn de proves Selenium - Entorn
+# --------------------------------------------------------------------
+# --------------------------------------------------------------------
+
+
+# Definició de procés
+# --------------------------------------------------------------------
 defproc.entorn.nom=Selenium defpro
 defproc.entorn.titol=Entorn de proves Selenium - Definicio Proces
 defproc.deploy.definicio.proces.nom=expexe
@@ -46,10 +54,11 @@ defproc.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\
 # Windows
 # deploy.arxiu.path=c:/expexe.par
 # Linux
-#deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe.par
-defproc.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\entorn_defpro.exp
+#deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
+defproc.export.entorn.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
 
-# Definició de procés
+# Definició de procés - Variables
+# --------------------------------------------------------------------
 defproc.enum.codi1=sino
 defproc.enum.nom1=Sí/No
 
@@ -79,79 +88,26 @@ defproc.variable.enum.nom=Nom variable boolean
 defproc.variable.reg.codi=var_registre
 defproc.variable.reg.nom=Nom variable registre
 
-defproc.variable.codi2=var_dat01
-defproc.variable.nom2=Nom variable data 1
-defproc.variable.codi3=var_enum01
-defproc.variable.nom3=Nom variable seleccio 1
-defproc.variable.codi4=var_reg01
-defproc.variable.nom4=Nom variable registre 1
-defproc.variable.codi5=var_mul01
-defproc.variable.nom5=Nom variable múltiple 1
-defproc.variable.codi6=var_ocl01
-defproc.variable.nom6=Nom variable oculta 1
-defproc.variable.codi7=var_varreg01
-defproc.variable.nom7=Camp 1 variable registre
-defproc.variable.codi8=var_varreg02
-defproc.variable.nom8=Camp 2 variable registre
+# Definició de procés - Docuemnts
+# --------------------------------------------------------------------
 
-defproc.agrupacio.codi1=agrvar_01
+# Definició de procés - Tasques
+# --------------------------------------------------------------------
+defproc.export.entorn.tasques.arxiu.path=/home/sion/Escriptori/lot3/entorn_tasques_defpro.exp
+# --------------------------------------------------------------------
+# --------------------------------------------------------------------
 
-defproc.document.codi1=doc_01
-defproc.document.nom1=Nom document 1
-defproc.document.codi2=doc_02
-defproc.document.nom2=Nom document 2
-defproc.document.arxiu=c:/plantilla.odt
 
-defproc.termini.codi1=ter_01
-defproc.termini.nom1=Nom termini 1
+# TRAMITACIÓ
+######################################################################
 
-defproc.tasca.codi1=tasca1
-
-# Tipus d'expedient
-tipexp.estat.codi1=revdoc
-tipexp.estat.nom1=Revisant documentació
-tipexp.enum.codi1=tipexp
-tipexp.enum.nom1=Tipus expedient
-
-# Portasignatures
-deploy.arxiu.portasignatures=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
-app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
-app.portasignatures.plugin.url=http://localhost:8080/helium-selenium-integraciones/services/CWS
-app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
-app.portasignatures.plugin.usuari=HELIUM
-app.portasignatures.plugin.password=HELIUM
-
-# Custodia
-deploy.arxiu.custodia=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
-app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
-app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
-app.custodia.plugin.caib.url=http://localhost:8080/helium-selenium-integraciones/services/CustodiaDocumentos
-app.custodia.plugin.caib.usuari=HELIUM
-app.custodia.plugin.caib.password=HELIUMABC
-app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
-
-# Integració amb el Registre
-deploy.arxiu.registre=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
-
-# Tramitación
-app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
-
-# Tramitación Selenium
+# Tramitació
+# --------------------------------------------------------------------
 tramsel.entorn.nom=Entorn de proves Selenium - Tramitación
 tramsel.entorn.titol=Entorn de proves Selenium - Tramitación
 tramsel.deploy.definicio.proces.nom=expexe
 tramsel.deploy.tipus.expedient.nom=Tipus expedient de Selenium
 
-tramit.exp.num=SE-16/2013
-tramit.exp.nom=[SE-16/2013] Expedient de prova Selenium 16
-tramit.tasca.nom1=tasca1
-tramit.tasca.nom2=tasca2
-tramit.doctasca.arxiu1=c:/docAdjunt.docx
-tramit.variable.codi1=varstr02
-tramit.variable.valor1=Valor variable string
-tramit.usuari.codi1=u03420
-tramit.document.nom1=Nom document 1
-tramit.docadjunt.arxiu1=c:/docAdjunt.docx
 tramit.docadjunt.nom1=Nom document adjunt 1
 
 tramsel_accio.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_accio.par
@@ -168,3 +124,85 @@ defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_heliu
 
 defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_dades_exp.exp
 defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_subproces.par
+# --------------------------------------------------------------------
+
+
+
+# INTEGRACIÓ
+####################################################################### 
+
+# Portasignatures
+# --------------------------------------------------------------------
+deploy.arxiu.portasignatures=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
+app.portasignatures.plugin.url=http://localhost:8080/helium-selenium-integraciones/services/CWS
+app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
+app.portasignatures.plugin.usuari=HELIUM
+app.portasignatures.plugin.password=HELIUM
+
+# Custodia
+# --------------------------------------------------------------------
+deploy.arxiu.custodia=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
+app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
+app.custodia.plugin.caib.url=http://localhost:8080/helium-selenium-integraciones/services/CustodiaDocumentos
+app.custodia.plugin.caib.usuari=HELIUM
+app.custodia.plugin.caib.password=HELIUMABC
+app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
+
+# Integració amb el Registre
+# --------------------------------------------------------------------
+deploy.arxiu.registre=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+
+
+app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
+
+
+
+
+
+#defproc.variable.codi2=var_dat01
+#defproc.variable.nom2=Nom variable data 1
+#defproc.variable.codi3=var_enum01
+#defproc.variable.nom3=Nom variable seleccio 1
+#defproc.variable.codi4=var_reg01
+#defproc.variable.nom4=Nom variable registre 1
+#defproc.variable.codi5=var_mul01
+#defproc.variable.nom5=Nom variable múltiple 1
+#defproc.variable.codi6=var_ocl01
+#defproc.variable.nom6=Nom variable oculta 1
+#defproc.variable.codi7=var_varreg01
+#defproc.variable.nom7=Camp 1 variable registre
+#defproc.variable.codi8=var_varreg02
+#defproc.variable.nom8=Camp 2 variable registre
+#
+#defproc.agrupacio.codi1=agrvar_01
+#
+#defproc.document.codi1=doc_01
+#defproc.document.nom1=Nom document 1
+#defproc.document.codi2=doc_02
+#defproc.document.nom2=Nom document 2
+#defproc.document.arxiu=c:/plantilla.odt
+#
+#defproc.termini.codi1=ter_01
+#defproc.termini.nom1=Nom termini 1
+#
+#defproc.tasca.codi1=tasca1
+#
+## Tipus d'expedient
+#tipexp.estat.codi1=revdoc
+#tipexp.estat.nom1=Revisant documentació
+#tipexp.enum.codi1=tipexp
+#tipexp.enum.nom1=Tipus expedient
+
+#tramit.exp.num=SE-16/2013
+#tramit.exp.nom=[SE-16/2013] Expedient de prova Selenium 16
+#tramit.tasca.nom1=tasca1
+#tramit.tasca.nom2=tasca2
+#tramit.doctasca.arxiu1=c:/docAdjunt.docx
+#tramit.variable.codi1=varstr02
+#tramit.variable.valor1=Valor variable string
+#tramit.usuari.codi1=u03420
+#tramit.document.nom1=Nom document 1
+#tramit.docadjunt.arxiu1=c:/docAdjunt.docx
+#tramit.docadjunt.nom1=Nom document adjunt 1
