MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.3.1.1 Crear variable sense plantilla 	DPR.3.1.2 Crear variable amb plantilla 	DPR.3.4 Eliminar documents
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1197 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -49,7 +49,7 @@ defproc.deploy.definicio.proces.nom=expexe
 defproc.deploy.definicio.subproces.nom=subprocesInfo
 defproc.deploy.tipus.expedient.codi=TipExpSel
 defproc.deploy.tipus.expedient.nom=Tipus expedient de Selenium
-defproc.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe.par
+defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
 #deploy.arxiu.path=src\\test\\resources\\expexe.par
 # Windows
 # deploy.arxiu.path=c:/expexe.par
@@ -90,6 +90,11 @@ defproc.variable.reg.nom=Nom variable registre
 
 # Definició de procés - Docuemnts
 # --------------------------------------------------------------------
+defproc.document.noplant.codi=docnoplant
+defproc.document.noplant.nom=Document sense plantilla
+defproc.document.plant.codi=docplant
+defproc.document.plant.nom=Document amb plantilla
+defproc.document.plant.path=/home/sion/Escriptori/lot3/plantillaProves.odt
 
 # Definició de procés - Tasques
 # --------------------------------------------------------------------
