MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.3.1.3 Definir camp amb data 	DPR.3.1.4 Adjuntar automàticament al generar 	DPR.3.2 Modificar documents 	DPR.3.3 Descarregar plantilla
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1202 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -63,6 +63,12 @@
 			<version>${helium.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-codec</artifactId>
+					<groupId>commons-codec</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
