--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -95,6 +95,9 @@ defproc.document.noplant.nom=Document sense plantilla
 defproc.document.plant.codi=docplant
 defproc.document.plant.nom=Document amb plantilla
 defproc.document.plant.path=/home/sion/Escriptori/lot3/plantillaProves.odt
+defproc.document.plant.hash=fd54a35deaa4f7fc0ec254558596dba5
+defproc.document.plant2.path=/home/sion/Escriptori/lot3/plantillaProves2.odt
+defproc.document.plant2.hash=9f557d239683751f2d210947b8424afd
 
 # Definició de procés - Tasques
 # --------------------------------------------------------------------
