MID: 655 MSG: Jocs de proves amb Selelium v.3 EXP.7.2 Adjuntar document
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1207 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -36,6 +36,7 @@ test.base.group.tipo=tipo de pruebas
 # Entorn
 # --------------------------------------------------------------------
 entorn.nom=Selenium entorn
+#entorn.nom=proves_selenium
 entorn.titol=Entorn de proves Selenium - Entorn
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
@@ -132,6 +133,9 @@ defproc.nou_tasca_ini.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_heliu
 
 defproc.tasca_dades.exp.export.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_tasca_dades_exp.exp
 defproc.subproces.deploy.arxiu.path=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\expexe_subproces.par
+
+deploy.arxiu.pdf.tramitacio_1=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
+deploy.arxiu.pdf.tramitacio_2=C\:\\Users\\javierg\\workspace_helium_30\\helium-3.0\\helium-selenium\\src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
 # --------------------------------------------------------------------
 
 
