MID: 655 MSG: Jocs de proves amb Selenium v.3 	DPR.1.2 Desplegar arxiu d'exportació
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1208 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -14,16 +14,16 @@ webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedri
 # Adreça - usuari del test
 test.base.url.inicio.seycon=false
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
-test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
-test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
+test.base.url.disseny=http://siona:siona@localhost:8080/helium/index.html
+test.base.url.feina=http://siona:siona@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=admin
 test.base.usuari.configuracio.nom=Usuari Administrador
 
-test.base.usuari.disseny=admin
+test.base.usuari.disseny=siona
 test.base.usuari.disseny.nom=Usuari Administrador
 
-test.base.usuari.feina=admin
+test.base.usuari.feina=siona
 test.base.usuari.feina.nom=Usuari Administrador
 
 test.base.rol.configuracio=HEL_USER
@@ -57,6 +57,7 @@ defproc.deploy.arxiu.path=/home/sion/Escriptori/lot3/expexe.par
 # Linux
 #deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
 defproc.export.entorn.arxiu.path=/home/sion/Escriptori/lot3/entorn_defpro.exp
+defproc.deploy.export.path=/home/sion/Escriptori/lot3/expexe_defpro_ini.exp
 
 # Definició de procés - Variables
 # --------------------------------------------------------------------
@@ -102,7 +103,7 @@ defproc.document.plant2.hash=9f557d239683751f2d210947b8424afd
 
 # Definició de procés - Tasques
 # --------------------------------------------------------------------
-defproc.export.entorn.tasques.arxiu.path=/home/sion/Escriptori/lot3/entorn_tasques_defpro.exp
+defproc.export.arxiu.path=/home/sion/Escriptori/lot3/expexe_defpro_tasques.exp
 # --------------------------------------------------------------------
 # --------------------------------------------------------------------
 
